# nas_agent

./: .gitignore  README.md  entry.py  headquarter.py  launch.yml  pyproject.toml  sorting_config.yml
dove/: __init__.py  bark.py  base.py  dove.py  extern.py  serverchan.py
jarvis/: __init__.py  app.py  jarvis.py
local.template/: dove.yml  jarvis.yml  launch.yml  sorting_config.yml
sorting_agent/: __init__.py  processes.py  sorting_agent.py
